Fix spacing, add row example to about

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,104 +1,107 @@
 body {
-  margin: 0 0 0 0 !important;
-	padding: 0;
-  background-image: url('../assets/stars.gif');
-  background-repeat:repeat;
-  color: white;
-  font-family:  "Courier New","Lucida Console", monospace;
+    margin: 0 0 0 0 !important;
+    padding: 0;
+    background-image: url('../assets/stars.gif');
+    background-repeat:repeat;
+    color: white;
+    font-family:  "Courier New","Lucida Console", monospace;
 }
 
 .borderme{
-  width: 85%;
-  position: absolute;
-  margin: auto;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin-top: 45px;
+    width: 85%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: 45px auto auto;
 }
 
 .containerme{
-  margin-top: 100px;
+    margin-top: 100px;
 }
 
 h1{
-  font-weight: normal;
+    font-weight: normal;
 }
 
 p{
-  font-family:  "Courier New","Lucida Console", monospace;
-  color: white;
+    font-family:  "Courier New","Lucida Console", monospace;
+    color: white;
 }
 
-#banana{
-  /* TODO: make this a different font */
-  color:#f2ffcc
+.banana{
+    /* TODO: make this a different font */
+    color:#f2ffcc
 }
 #typewriter {
-  text-align: center;
-  font-size: 50px;
+    text-align: center;
+    font-size: 50px;
 }
-
 
 a:link {
-  color: #ffb84d;
-  background-color: transparent;
-  text-decoration: none;
+    color: #ffb84d;
+    background-color: transparent;
+    text-decoration: none;
 }
 a:visited {
-  color: #ffb84d;
-  background-color: transparent;
-  text-decoration: none;
+    color: #ffb84d;
+    background-color: transparent;
+    text-decoration: none;
 }
 a:hover {
-  color: #ffff66;
-  background-color: transparent;
-  text-decoration: underline !important;
+    color: #ffff66;
+    background-color: transparent;
+    text-decoration: underline !important;
 }
 a:active {
-  color: #ffff66;
-  background-color: transparent;
-  text-decoration: underline;
+    color: #ffff66;
+    background-color: transparent;
+    text-decoration: underline;
 }
 
 #herenow{
-  color: #ffff66;
-  background-color: transparent;
+    color: #ffff66;
+    background-color: transparent;
 }
 
 .centered{
-  /*height: 200px;
-  width: auto;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -150px;
-  margin-left: -220px;*/
-  text-align: center;
+    /*height: 200px;
+    width: auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -150px;
+    margin-left: -220px;*/
+    text-align: center;
+}
+
+.bottom-padding {
+    padding-bottom: 50px;
 }
 
 .menuMIDDLE{
-  font-family:  "Courier New","Lucida Console", monospace;
-  /*width:400px;*/
-  font-size: 40px;
+    font-family:  "Courier New","Lucida Console", monospace;
+    /*width:400px;*/
+    font-size: 40px;
 }
 
 .menuTOP{
-  font-family:  "Courier New","Lucida Console", monospace;
-  text-align: center;
-  padding-bottom: 40px;
+    font-family:  "Courier New","Lucida Console", monospace;
+    text-align: center;
+    padding-bottom: 40px;
 }
 
 #portfolio{
-  list-style-type:square;
-  padding: 0px;
-  margin: 50px;
+    list-style-type:square;
+    padding: 0;
+    margin: 50px;
 }
+
 #navigation{
-   list-style-type: none;
-   padding: 0px;
-   margin: 0px;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 .img-icon {
